--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+
+
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>Mi restaurante</span>
+      <span class="example-spacer"></span>
+    </mat-toolbar-row>
+</mat-toolbar>
