--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<router-outlet></router-outlet>
-
-
   <mat-toolbar color="primary">
     <mat-toolbar-row>
       <span>Mi restaurante</span>
-      <span class="example-spacer"></span>
+      <span class="spacer"></span>
     </mat-toolbar-row>
 </mat-toolbar>
+
+<router-outlet></router-outlet>
