8-rutas de la vista de cliente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
     <mat-toolbar-row>
       <span>Mi restaurante</span>
       <span class="spacer"></span>
+      <span><a routerLink="/" mat-button>Inicio</a></span>
+      <span><a routerLink="/menu" mat-button>Menu</a></span>
+      <span><a routerLink="/reservation" mat-button>Reservar</a></span>
     </mat-toolbar-row>
 </mat-toolbar>
 
