Imagen de fondo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-  <mat-toolbar color="primary">
+<div id="bg-image"></div>
+
+<mat-toolbar color="primary">
     <mat-toolbar-row>
       <span>Mi restaurante</span>
       <span class="spacer"></span>
