--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,10 @@
 :host{
+    color: rgb(255, 255, 255)
+}
+
+#bg-image {
     display:block;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-image: url('../assets/restaurant.jpg');
@@ -8,6 +13,9 @@
     background-size: cover;
     background-color: rgb(50, 50, 50);
     background-blend-mode: multiply;
+    z-index: -1;
+}
 
-    color: rgb(255, 255, 255)
+.spacer {
+    flex: 1 1 auto;
 }
