--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,1 +1,58 @@
-<p>reservation works!</p>
+<form [formGroup]="form" (ngSubmit)="formSubmit(form)">
+    <mat-card class="reservation-card">
+        <mat-card-header>
+          <mat-card-title>Crear una reservacion</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          
+            <!-- Name -->
+            <mat-form-field class="full-width">
+                <mat-label>Nombre</mat-label>
+                <input matInput type="text" placeholder="Escribe tu nombre" formControlName="name">
+            </mat-form-field>
+            
+            <!-- Email -->
+            <mat-form-field class="full-width">
+                <mat-label>Email</mat-label>
+                <input matInput type="email" placeholder="Escribe tu email" formControlName="email">
+            </mat-form-field>
+
+            <!-- Phone -->
+            <mat-form-field class="full-width">
+                <mat-label>Telefono</mat-label>
+                <input matInput type="tel" placeholder="Escribe tu telefono" formControlName="phone">
+            </mat-form-field>
+
+            <!-- People -->
+            <mat-form-field class="full-width">
+                <mat-label>Nombre</mat-label>
+                <input matInput type="number" placeholder="Numero de personas" formControlName="people">
+            </mat-form-field>
+
+            <!-- Date -->
+            <mat-form-field>
+                <mat-label>Fecha</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="reservationDate">
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+
+            <!-- Schedule -->
+            <mat-form-field>
+                <mat-label>Horario</mat-label>
+                <mat-select formControlName="reservationSchefule">
+                    <mat-option value="6">6:00 pm</mat-option>
+                    <mat-option value="7">7:00 pm</mat-option>
+                    <mat-option value="8">8:00 pm</mat-option>
+                    <mat-option value="9">9:00 pm</mat-option>
+                </mat-select>
+            </mat-form-field>
+
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-button type="reset" (click)="formCancel()">Cancelar</button>
+            <button mat-raised-button color="primary" type="submit">Reservar</button>
+        </mat-card-actions>
+    </mat-card>
+</form>
+
