17-creacion de pantalla de lista de reservaciones

--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -1,1 +1,46 @@
-<p>reservation-list works!</p>
+<div class="wrapper">
+    <table mat-table [dataSource]="reservations" class="mat-elevation-z8">
+    
+        <!-- ReservationDate Column -->
+        <ng-container matColumnDef="reservationDate">
+          <th mat-header-cell *matHeaderCellDef>Fecha</th>
+          <td mat-cell *matCellDef="let element"> {{element.reservationDate }} </td>
+        </ng-container>
+        <!--no se pudo cambiar el formato de fecha, desaparecia al agregar | date:'mediumDate'-->
+
+        <!-- ReservationSchedule Column -->
+        <ng-container matColumnDef="reservationSchedule">
+          <th mat-header-cell *matHeaderCellDef>Horario</th>
+          <td mat-cell *matCellDef="let element"> {{element.reservationSchedule + ':00pm'}} </td>
+        </ng-container>
+    
+        <!-- People Column -->
+        <ng-container matColumnDef="people">
+          <th mat-header-cell *matHeaderCellDef>Personas</th>
+          <td mat-cell *matCellDef="let element"> {{element.people}} </td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Cliente</th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+    
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>Email</th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          </ng-container>
+    
+          <!-- Phone Column -->
+        <ng-container matColumnDef="phone">
+            <th mat-header-cell *matHeaderCellDef>Telefono</th>
+            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+          </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    
+    
+</div>
