--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -37,6 +37,19 @@
             <th mat-header-cell *matHeaderCellDef>Telefono</th>
             <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
           </ng-container>
+
+           <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" (click)="editButtonClicked()">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="deleteButtonClicked()">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+          </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
