--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -4,7 +4,7 @@
         <!-- ReservationDate Column -->
         <ng-container matColumnDef="reservationDate">
           <th mat-header-cell *matHeaderCellDef>Fecha</th>
-          <td mat-cell *matCellDef="let element"> {{element.reservationDate }} </td>
+          <td mat-cell *matCellDef="let element"> {{element.reservationDate | date:'mediumDate' }} </td>
         </ng-container>
         <!--no se pudo cambiar el formato de fecha, desaparecia al agregar | date:'mediumDate'-->
 
